# RecSys-Movies

./: .eval_cache.json  .gitignore  README.md  precompute.py  precomputed_recs.json  pyproject.toml  render.yaml  server.py  slide deck RecSys.pptx  ~$slide deck RecSys.pptx
notebooks/: 01_eda.ipynb  02_evaluation.ipynb
src/: __init__.py  data.py  eda.py  evaluation.py  metrics.py  posters.py  recommenders.py
static/: index.html
