[project]
name = "recommender"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "markdown>=3.10.2",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.49.0",
]
